--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   text.className = 'skill-text';
   text.textContent = "0%";
 
-  const labelText = docu mb,m  ment.createElement('div');
+  const labelText = document.createElement('div');
   labelText.className = 'skill-label';
   labelText.textContent = label;
 
@@ -390,3 +390,4 @@ document.addEventListener('DOMContentLoaded', function() {
     
 </body>
 </html>
+
