--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <a href="https://www.instagram.com/yuvasri_govindarajan?igsh=MTR2N3hrOHpyZGNrbQ=="><i class="fa-brands fa-square-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/yuvasri-govindarajan-530a65294/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BRVEhdPiMQHeZU6Gvi2i7EQ%3D%3D"><i class="fa-brands fa-linkedin"></i></a>
              </div>
-             <a href="Yuva resume.FINALE (5).doc" download class="btn btn2">Download CV</a>   
+             <a href="Yuva resume.FINALE (5).docx" download class="btn btn2">Download CV</a>   
             </div>
             <div class="contact-right">
                 <form>
@@ -390,3 +390,4 @@ document.addEventListener('DOMContentLoaded', function() {
     
 </body>
 </html>
+
