--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <h3>Bontrip</h3>
                         <p>Born to explore? Born Trip is your perfect travel buddy! Discover hidden gems, plan dreamy getaways, and make every trip unforgettable.Your next adventure starts here</p>
                         <!-------------------------------------add link of your works----------------->
-                        <a href="#"><i class="fa-solid fa-up-right-from-square" style="color: #075ea2;"></i></a>
+                        <a href="https://yuvasri494.github.io/travel-Bontrips/"><i class="fa-solid fa-up-right-from-square" style="color: #075ea2;"></i></a>
                     </div>
 
                     
@@ -145,15 +145,15 @@
                     <div class="layer">
                         <h3>AI chatbot</h3>
                         <p>Here I have created a AI chatbot where we can interact with AI to checking symptoms looking for basic medical advice or tracking your wellness</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square" style="color: #075ea2;"></i></a>
+                        <a href="https://yuvasri494.github.io/rural-healthcare-ai-agent/"><i class="fa-solid fa-up-right-from-square" style="color: #075ea2;"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="ui.jpeg">
                     <div class="layer">
-                        <h3>E-commerce Website</h3>
-                        <p>It is your one stop destination for trendy fashion,quality electronics,stylish home essential and much more all-with unbeatable price and discounts</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square" style="color: #075ea2;"></i></a>
+                        <h3>Simple Login page</h3>
+                        <p>This project might be simple, but it’s a small step in building a strong foundation for larger, more complex web applications,I’ve built a clean and minimal Login Page using only HTML & CSS.</p>
+                        <a href="https://yuvasri494.github.io/login-page/"><i class="fa-solid fa-up-right-from-square" style="color: #075ea2;"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -390,5 +390,6 @@ document.addEventListener('DOMContentLoaded', function() {
     
 </body>
 </html>
+
 
 
