--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="layer">
                         <h3>AI chatbot</h3>
                         <p>Here I have created a AI chatbot where we can interact with AI to checking symptoms looking for basic medical advice or tracking your wellness</p>
-                        <a href="https://yuvasri494.github.io/rural-healthcare-ai-agent/"><i class="fa-solid fa-up-right-from-square" style="color: #075ea2;"></i></a>
+                        <a href="https://glistening-mousse-ede20e.netlify.app/"><i class="fa-solid fa-up-right-from-square" style="color: #075ea2;"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -390,6 +390,7 @@ document.addEventListener('DOMContentLoaded', function() {
     
 </body>
 </html>
+
 
 
 
