--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="skills-section">
+    <section id="skill" class="skills-section">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">My Skills</h2>
             <div class="skills-container">
@@ -1212,5 +1212,6 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
