--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#services" class="nav-link">Services</a></li>
             <li><a href="#portfolio" class="nav-link">Works</a></li>
-            <li><a href="#skills" class="nav-link">Skills</a></li>
+            <li><a href="#skill" class="nav-link">Skills</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
     </nav>
@@ -757,6 +757,14 @@ function animateCircularSkills() {
 document.addEventListener('DOMContentLoaded', () => {
     const skillsSection = document.getElementById('skills');
     
+    // Initialize circular skills with 0%
+    const circularSkills = document.querySelectorAll('.circular-skill');
+    circularSkills.forEach(skill => {
+        const textElement = skill.querySelector('.circle-text');
+        const originalLabel = textElement.textContent.trim();
+        textElement.innerHTML = `0%<br><small>${originalLabel}</small>`;
+    });
+    
     if (skillsSection) {
         skillsSection.addEventListener('mouseenter', () => {
             if (!skillBarsAnimated) {
@@ -1212,6 +1220,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
