--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <div class="portfolio-overlay">
                             <h3>AI Chatbot</h3>
                             <p>An AI chatbot where we can interact with AI for checking symptoms, looking for basic medical advice, or tracking wellness.</p>
-                            <a href="https://glistening-mousse-ede20e.netlify.app/" target="_blank" class="project-link">
+                            <a href="https://yuvasri494.github.io/jeevan-deploy/" target="_blank" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> View Project
                             </a>
                         </div>
@@ -1225,6 +1225,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
