--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                         </a>
                     </div>
 
-                    <a href="Yuva resume.FINALE (5).docx" download class="btn-primary download-btn">
+                    <a href="YUVASRI RESUME" download class="btn-primary download-btn">
                         <i class="fas fa-download"></i> Download CV
                     </a>
                 </div>
@@ -1225,6 +1225,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
